# TermSqlite

./: .gitmodules  CodesystemToDb.cs  Program.cs  README.md  TermSqlite.csproj  Vcl.cs  setup.sh
Watchers/: NdJsonWatcher.cs
bcp47/: 01-concepts.js  Cargo.toml  build.sh
bcp47/src/: codesystem.rs  extism.rs  lib.rs
bcp47/templates/: CodeSystem-bcp47.json
sqlite/: makedb.sh  populate.sqlite  schema.sqlite
src/: CodesystemToDb.cs  Extism.cs  Program.cs  Sql.cs  SqlManager.cs  SqlParamInjector.cs  Vcl.cs
src/Watchers/: NdJsonWatcher.cs
