[package]
name = "bcp47"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true

[lib]
crate-type=["cdylib"]

[dependencies]
extism-convert = "1.2.0"
extism-pdk = "1.1.0"
lazy_static = "1.4.0"
nom = "7.1.3"
regex = "1.10.4"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
wit-bindgen = "0.22.0"
